--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "main": ".server/index.js",
   "type": "module",
   "engines": {
-    "node": ">=20.11.1"
+    "node": ">=22.11.0"
   },
   "scripts": {
-    "build": "run-s build:frontend build:server",
-    "build:frontend": "NODE_ENV=production webpack",
-    "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/__fixtures__\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
+    "build": "NODE_ENV=production webpack",
     "docker:dev": "NODE_ENV=development run-p frontend:watch server:watch",
-    "predev": "npm run build:frontend",
+    "predev": "npm run build",
     "dev": "run-p frontend:watch server:watch",
     "dev:debug": "run-p frontend:watch server:debug",
     "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js}\"",
@@ -45,10 +43,10 @@
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
     "@hapi/yar": "11.0.2",
-    "@temporalio/activity": "1.11.4",
-    "@temporalio/client": "1.11.4",
-    "@temporalio/worker": "1.11.4",
-    "@temporalio/workflow": "1.11.4",
+    "@temporalio/activity": "1.11.5",
+    "@temporalio/client": "1.11.5",
+    "@temporalio/worker": "1.11.5",
+    "@temporalio/workflow": "1.11.5",
     "awilix": "12.0.3",
     "aws-embedded-metrics": "4.1.1",
     "babel-plugin-module-resolver": "5.0.2",
