Isolating and disabling Temporal integration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 LOG_LEVEL=info
+LOG_FORMAT=pretty
 GOVUK_NOTIFY_API_KEY=
 GOVUK_NOTIFY_DECISION_EMAIL_TEMPLATE_ID=
 TEMPORAL_SERVER_URL=localhost:7233
