Remove notify client

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 LOG_LEVEL=info
 LOG_FORMAT=pretty
 GOVUK_NOTIFY_API_KEY=
-GOVUK_NOTIFY_DECISION_EMAIL_TEMPLATE_ID=
+GOVUK_NOTIFY_DECISION_EMAIL_TEMPLATE_ID=4f2e260c-64ef-411d-9568-fdfa1f1e156a
 TEMPORAL_SERVER_URL=localhost:7233
 TEMPORAL_NAMESPACE=default
 TEMPORAL_MTLS_CRT=
@@ -11,3 +11,4 @@ COMPANIES_HOUSE_API_URL=https://api.company-information.service.gov.uk
 COMPANIES_HOUSE_API_KEY=
 GRPC_TRACE=
 GRPC_VERBOSITY=
+CDP_HTTPS_PROXY=
