--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@hapi/catbox-redis": "7.0.2",
     "@hapi/hapi": "21.3.10",
     "@hapi/inert": "7.1.0",
+    "@hapi/jwt": "3.2.0",
     "@hapi/vision": "7.0.3",
     "@hapi/yar": "11.0.2",
     "@temporalio/activity": "1.11.5",
@@ -55,7 +56,6 @@
     "ioredis": "5.4.1",
     "lodash": "4.17.21",
     "node-fetch": "3.3.2",
-    "notifications-node-client": "8.2.1",
     "nunjucks": "3.2.4",
     "pino": "9.2.0",
     "pino-pretty": "11.2.1",
